# Embedded_Linux_Valeo_Sprints

./: README.md
capstone_project/: logger_conf.txt
capstone_project/daemon/: logger.service  logger.timer
capstone_project/lib/: CMakeLists.txt  MessageQueue.cpp  MessageQueue.h
capstone_project/logger/: CMakeLists.txt
capstone_project/logger/inc/: logger.h  sockets.h
capstone_project/logger/src/: CMakeLists.txt  logger.cpp  receiver.cpp  sockets.cpp
capstone_project/maths/: CMakeLists.txt
capstone_project/maths/src/: CMakeLists.txt  sender.cpp
capstone_project/native_logger/: CMakeLists.txt
capstone_project/native_logger/inc/: sockets.h
capstone_project/native_logger/src/: CMakeLists.txt  native_logger.cpp  sockets.cpp
file_handler_task/: README.md  run_logs.txt
file_handler_task/fh/: CMakeLists.txt
file_handler_task/fh/inc/: FIFO.h  commands.h  logger.h  semaphore.h  shm.h
file_handler_task/fh/src/: CMakeLists.txt  FIFO.cpp  SHM.cpp  commands.cpp  fileHandler.cpp  semaphore.cpp
file_handler_task/requester/: CMakeLists.txt
file_handler_task/requester/inc/: FIFO.h  semaphore.h  shm.h
file_handler_task/requester/src/: CMakeLists.txt  FIFO.cpp  SHM.cpp  logger.cpp  requester.cpp  semaphore.cpp
